--- a/src/component/Admin/Admin.css
+++ b/src/component/Admin/Admin.css
@@ -20,6 +20,11 @@
     text-align: center;
     margin-bottom: 40px;
     font-family: 'Ubuntu', sans-serif;
+    text-decoration: none;
+}
+.wraper .sidebar h2 a{
+    text-decoration: none;
+    color: #fff;
 }
 .wraper .sidebar ul{
     text-align: left;
